# minipilot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/mp/: constants.hpp  main.hpp  math.hpp
include/mp/util/: constants.hpp
protobuf/: CMakeLists.txt
python/: CMakeLists.txt  packages.txt
src/: main.cpp  main.hpp
src/state/: ekf_ahrs.cpp  ekf_ahrs.hpp  ekf_inertial.cpp  ekf_inertial.hpp  state_estimator.hpp
src/tasks/: task_accelerometer.hpp  task_config.hpp  task_gyroscope.hpp  task_logger.hpp  task_receiver.cpp  task_receiver.hpp  task_state_estimator.cpp  task_state_estimator.hpp  task_telemetry.cpp  task_telemetry.hpp  task_three_axis_sensor.hpp  task_vehicle.cpp  task_vehicle.hpp
src/util/: constants.hpp  logger.hpp  math.hpp  pb_util.hpp
src/vehicles/: vehicle.hpp
src/vehicles/copter/: copter.cpp  copter.hpp  quadcopter.cpp  quadcopter.hpp
src/vehicles/copter/control/: copter_controller.hpp  copter_controller_pid.cpp  copter_controller_pid.hpp
